--- a/content/midterm.html
+++ b/content/midterm.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li class='has-children'><a href='Rust.html'>Rust</a><ul class='dropdown'><li><a href='Rust_src.html'>Rust_src</a></li></li></ul></ul><li><a href='Develop.html'>Develop</a><li><a href='w8.html'>w8</a><li class='has-children'><a href='online.html'>online</a><ul class='dropdown'><li><a href='w13.html'>w13</a><li><a href='w14.html'>w14</a></li></ul><li><a href='midterm.html'>midterm</a><li><a href='progress rate.html'>progress rate</a><li class='has-children'><a href='run.html'>run</a><ul class='dropdown'><li><a href='runsrc.html'>runsrc</a></li>
+                     <li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li class='has-children'><a href='Rust.html'>Rust</a><ul class='dropdown'><li><a href='Rust_src.html'>Rust_src</a></li></li></ul></ul><li><a href='Develop.html'>Develop</a><li><a href='w8.html'>w8</a><li class='has-children'><a href='online.html'>online</a><ul class='dropdown'><li><a href='w13.html'>w13</a><li><a href='w14.html'>w14</a></li></ul><li><a href='midterm.html'>midterm</a><li><a href='Tetris.html'>Tetris</a><li><a href='progress rate.html'>progress rate</a><li class='has-children'><a href='run.html'>run</a><ul class='dropdown'><li><a href='runsrc.html'>runsrc</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,7 +139,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w14 << <a href='w14.html'>Previous</a> <a href='progress rate.html'>Next</a> >> progress rate<br /><h1>midterm</h1>
+    <div id="tipue_search_content">w14 << <a href='w14.html'>Previous</a> <a href='Tetris.html'>Next</a> >> Tetris<br /><h1>midterm</h1>
 <script>
 var winkVideoData = {
   dataVersion: 1,
@@ -161,7 +161,8 @@ var winkVideoData = {
 <div class="winkVideoControlBarProgressThumbClass"></div>
 </div>
 <div class="winkVideoPlayOverlayClass"></div>
-</div><br />w14 << <a href='w14.html'>Previous</a> <a href='progress rate.html'>Next</a> >> progress rate</div>
+</div>
+<br />w14 << <a href='w14.html'>Previous</a> <a href='Tetris.html'>Next</a> >> Tetris</div>
         
     <!-- footer -->
       <div class="container">
