--- a/config/content.htm
+++ b/config/content.htm
@@ -105,7 +105,7 @@ var winkVideoData2 = {
 <div class="winkVideoPlayOverlayClass"></div>
 </div>
 <p>俄羅斯方塊6分影片:</p>
-<h1>w18</h1>
+<h1>期末任務1</h1>
 <script src="/static/brython.js"></script>
 <script src="/static/brython_stdlib.js"></script>
 <!-- for ggame -->
@@ -167,7 +167,7 @@ def clear_bd(ev):
     bd.clear()
 # Brython 3.3.4 內建的 container 名稱為  'container' 且 turtle 輸出為 svg 必須使用 div 訂定 id
 Ace = ace.Editor(editor_id="kw_editor", console_id="kw_console", container_id="kw__container", storage_id="kw_py_src" )
-Tetrisurl= "https://gist.githubusercontent.com/41023146/7b66491a4db2d0774555cf9d37b1c4cf/raw/b72174bf26ad43ef921f14545caf9e602e225091/Python"
+Tetrisurl= "https://gist.githubusercontent.com/41023146/3ed21da648803b7f0aacc975200580f7/raw/43108683df39927a8a6ae7ab428c84a502170010/Python"
 Tetris = open(Tetrisurl).read()
 Ace.editor.setValue(Tetris)
 Ace.editor.scrollToRow(0)
@@ -186,7 +186,29 @@ doc['clear_bd'].bind('click', clear_bd)
 <p><button id="kw_run">Run</button> <button id="kw_show_console">Output</button> <button id="kw_clear_console">清除輸出區</button><button id="clear_bd">清除繪圖區</button><button onclick="window.location.reload()">Reload</button></p>
 <div style="width: 100%; height: 100%;"><textarea autocomplete="off" id="kw_console"></textarea></div>
 <div id="brython_div"></div>
-<div class="col-md-0" height="1" id="graphics-column" width="1"></div><h1>online</h1>
+<div class="col-md-0" height="1" id="graphics-column" width="1"></div>
+<script>
+var winkVideoData3 = {
+  dataVersion: 1,
+  frameRate: 10,
+  buttonFrameLength: 5,
+  buttonFrameOffset: 2,
+  frameStops: {
+  },
+};
+</script>
+<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/static" data-varname="winkVideoData3" height="630" muted="true" width="1008">
+<source src="/downloads/期末任務影片.mp4" type="video/mp4"/></video>
+<div class="winkVideoOverlayClass"></div>
+<div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
+<div class="winkVideoControlBarProgressLeftClass"></div>
+<div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
+<div class="winkVideoControlBarProgressRightClass"></div>
+<div class="winkVideoControlBarProgressFilledMiddleClass"></div>
+<div class="winkVideoControlBarProgressThumbClass"></div>
+</div>
+<div class="winkVideoPlayOverlayClass"></div>
+</div><h1>online</h1>
 <h2>w13</h2>
 <!-- 導入 brython 程式庫 -->
 <script src="/static/brython.js"></script>
