--- a/content/期末任務1.html
+++ b/content/期末任務1.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li class='has-children'><a href='Rust.html'>Rust</a><ul class='dropdown'><li><a href='Rust_src.html'>Rust_src</a></li></li></ul></ul><li><a href='Develop.html'>Develop</a><li><a href='w8.html'>w8</a><li><a href='w17.html'>w17</a><li><a href='期末任務1.html'>期末任務1</a><li class='has-children'><a href='online.html'>online</a><ul class='dropdown'><li><a href='w13.html'>w13</a><li><a href='w14.html'>w14</a></li></ul><li><a href='midterm.html'>midterm</a><li><a href='Tetris.html'>Tetris</a><li><a href='progress rate.html'>progress rate</a><li class='has-children'><a href='run.html'>run</a><ul class='dropdown'><li><a href='runsrc.html'>runsrc</a></li>
+                     <li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li class='has-children'><a href='Rust.html'>Rust</a><ul class='dropdown'><li><a href='Rust_src.html'>Rust_src</a></li></li></ul></ul><li><a href='Develop.html'>Develop</a><li><a href='w8.html'>w8</a><li><a href='w17.html'>w17</a><li><a href='期末任務1.html'>期末任務1</a><li><a href='期末任務2.html'>期末任務2</a><li class='has-children'><a href='online.html'>online</a><ul class='dropdown'><li><a href='w13.html'>w13</a><li><a href='w14.html'>w14</a></li></ul><li><a href='midterm.html'>midterm</a><li><a href='Tetris.html'>Tetris</a><li><a href='progress rate.html'>progress rate</a><li class='has-children'><a href='run.html'>run</a><ul class='dropdown'><li><a href='runsrc.html'>runsrc</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,7 +139,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w17 << <a href='w17.html'>Previous</a> <a href='online.html'>Next</a> >> online<br /><h1>期末任務1</h1>
+    <div id="tipue_search_content">w17 << <a href='w17.html'>Previous</a> <a href='期末任務2.html'>Next</a> >> 期末任務2<br /><h1>期末任務1</h1>
 <script src="./../cmsimde/static/brython.js"></script>
 <script src="./../cmsimde/static/brython_stdlib.js"></script>
 <!-- for ggame -->
@@ -242,7 +242,8 @@ var winkVideoData3 = {
 <div class="winkVideoControlBarProgressThumbClass"></div>
 </div>
 <div class="winkVideoPlayOverlayClass"></div>
-</div><br />w17 << <a href='w17.html'>Previous</a> <a href='online.html'>Next</a> >> online</div>
+</div>
+<br />w17 << <a href='w17.html'>Previous</a> <a href='期末任務2.html'>Next</a> >> 期末任務2</div>
         
     <!-- footer -->
       <div class="container">
