--- a/content/w8.html
+++ b/content/w8.html
@@ -162,31 +162,7 @@ img.add_border {
 <p>    1.下載gpg4win</p>
 <p>    2.打開Kleopatra用(解密/檢查)打開nginx-1.20.2.zip,查看它的ID</p>
 <p>    3.再去官網下載檔案旁邊的pgp檔看兩者的ID是否一樣</p>
-<p>
-<script>
-var winkVideoData = {
-  dataVersion: 1,
-  frameRate: 10,
-  buttonFrameLength: 5,
-  buttonFrameOffset: 2,
-  frameStops: {
-  },
-};
-</script>
-</p>
-<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="./../cmsimde/static" data-varname="winkVideoData" height="630" muted="true" width="1008">
-<source src="./../downloads/w4_wifi/w4_wifi.mp4" type="video/mp4"/></video>
-<div class="winkVideoOverlayClass"></div>
-<div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
-<div class="winkVideoControlBarProgressLeftClass"></div>
-<div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
-<div class="winkVideoControlBarProgressRightClass"></div>
-<div class="winkVideoControlBarProgressFilledMiddleClass"></div>
-<div class="winkVideoControlBarProgressThumbClass"></div>
-</div>
-<div class="winkVideoPlayOverlayClass"></div>
-</div>
-<br />Develop << <a href='Develop.html'>Previous</a> <a href='w17.html'>Next</a> >> w17</div>
+<p></p><br />Develop << <a href='Develop.html'>Previous</a> <a href='w17.html'>Next</a> >> w17</div>
         
     <!-- footer -->
       <div class="container">
